class Media {
  createSupport() {
    throw new Error('Implement this method');
  }
  createWriter() {
    throw new Error('Implement this method');
  }
}

module.exports = { Media }